
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-05-20 Christophe Demko <chdemko@gmail.com>
	* README.md
	* lib/jacoco/jacocoant.jar
		^ Use jacoco 0.7.1

2014-05-15 Christophe Demko <chdemko@gmail.com>
	* .travis.yml
		# Add texlive-latex-extra for fancybox LaTeX package

2014-05-14 Jean-François Viaud <jviaud@univ-lr.fr>
	* build.xml
	* doc/tutorial/ArrowRelation.dot
		+ add file
	* doc/tutorial/DependencyGraph.dot
		+ add file
	* doc/tutorial/Example.dot
		^ move from doc/tutorial/images/Example.dot
	* doc/tutorial/IrreductibleClosure.dot
		+ add file
	* doc/tutorial/IrreductibleGraph.dot
		+ move from doc/tutorial/images/IrreductibleGraph.dot
	* doc/tutorial/JoinClosure.dot
		+ add file
	* doc/tutorial/M5.dot
		+ move from doc/tutorial/images/M5.dot
	* doc/tutorial/MeetClosure.dot
		+ add file
	* doc/tutorial/images/Example.png
		+ add file
	* doc/tutorial/images/IrreductibleGraph.png
		+ add file
	* doc/tutorial/images/M5.png
		+ add file
	* doc/tutorial/title
		+ update date
	* doc/tutorial/tutorial_bijectivecomponent.md
		+ add file
	* doc/tutorial/tutorial_conceptlattice.md
		+ add file
	* doc/tutorial/tutorial_lattice.md
		^ complete tutorial

2014-05-08 Christophe Demko <chdemko@gmail.com>
	* all *.java files
		^ Change licence info

2014-05-07 Christophe Demko <chdemko@gmail.com>
	* src/lattice/Context.java
	* src/lattice/ImplicationalSystem.java
		# parse methods should init components
		+ parse and init methods return this for chaining

2014-05-07 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/DGraphWriterDot.java
	* src/lattice/ArrowRelationWriterTeX.java
	* src/lattice/ConceptLatticeWriterDot.java
	* src/lattice/ContextReaderText.java